Egghead: Fixed overflow wrap for markdown preview window

--- a/Egghead/wwwroot/css/simplemde.css
+++ b/Egghead/wwwroot/css/simplemde.css
@@ -586,6 +586,8 @@ span.CodeMirror-selectedtext { background: none; }
     display: none;
     box-sizing: border-box;
     border: 1px solid #ddd;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .editor-preview-active-side {
